# EmployeeAchievements

.deploy/local/: docker-compose.yaml
.deploy/local/initDB/: Dockerfile
Backend/: .gitignore  CMakeLists.txt
Backend/src/: CMakeLists.txt  main.cpp
Backend/src/DataBaseUtil/: DB.cpp  DB.h
Backend/src/Models/: BaseModel.cpp  BaseModel.h
Backend/src/Models/Employee/: Divsion.cpp  Divsion.h  Employee.cpp  Employee.h  Status.cpp  Status.h
Backend/src/Repositories/: Repository.h
Backend/src/Repositories/Division/: DivisionRepository.cpp  DivisionRepository.h
InitDB/: .dockerignore
InitDB/sql/: data.sql  init.sql
InitDB/src/: CMakeLists.txt  main.cpp
InitDB/src/DataBaseUtil/: DBWork.cpp  DBWork.h
